template added to cours